# BNB-Fourmeme-AI-Sniper-Trading-bot

./: .env  .gitignore  README.md  linux_start.sh  mac_start.sh  pyproject.toml  windows_start.bat
src/polymarket_copybot/: bot.py  cli.py  execution.py  gui.py  leader.py  logging_utils.py  mapping.py  models.py  risk.py  settings.py  state.py
