[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-copybot"
version = "0.1.0"
description = "Polymarket copy-trading bot scaffold (safe-by-default)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "You" }]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "PyQt6>=6.6",
  "py-clob-client>=0.18",
  "chalk-fancy>=1.0.9",
]

[project.scripts]
polymarket-copybot = "polymarket_copybot.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

